--- a/style.css
+++ b/style.css
@@ -96,3 +96,35 @@ margin-bottom: 30px;
     font-size: 20px;
     color: #474747;
 }
+
+
+/* what i do it because i can do it*/
+.what-i-do{
+    margin-top: 130px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skil-title{
+    font-weight: 700;
+    font-size: 20px;
+}
+.skill-description{
+    color: #757575;
+}
+.skill{
+    padding: 30px;
+    background: #ffffff;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0,0.6);
+    border-radius: 5px;
+
+}
+.section-title{
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 30px;
+    font-size: 35px;
+
+}
+/*start Rusume section start me and my project*/
