--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ nav li{
     background: orangered;
     color: wheat;
     padding: 18px 35px;
+    border: 1px solid white;
+    margin-bottom: 25px;
 }
 /*this is second part start*/
 .bannar{
@@ -165,4 +167,25 @@ margin-bottom: 30px;
 .resume-button{
     margin-top: 50px;
     text-align: center;
+}
+
+/*contact me and my pronject*/
+
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #fff8f3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact input,textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
 }
